add kr text and fix bugs

--- a/en/index.html
+++ b/en/index.html
@@ -77,7 +77,7 @@
 				<div class="rect rect-2"></div>
 				<div class="blot blot-10"></div>
 			</div>
-			<section class="box box-table main" id="main">
+			<section class="box box-table main go-animate" id="main">
 				<div class="box-cell">
 					<div class="main-image-wrapper">
 						<div class="main-image-coin"></div>
@@ -117,7 +117,7 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="#feedback-popup" data-fancybox class="button white block">Participate</a>
+								<a href="/users/sign_in" class="button white block">Participate</a>
 							</div>
 						</div>
 						<div class="form-box">
@@ -134,7 +134,7 @@
 				</div>
 			</section>
 			<div class="about-wrapper">
-				<section class="box full box-table about" id="about">
+				<section class="box full box-table about go-animate" id="about">
 					<div class="box-cell">
 						<div class="split">
 							<div class="split-col">
@@ -181,7 +181,7 @@
 			<div class="colored-bg-elements">
 				<div class="blot blot-10"></div>
 			</div>
-			<section class="box box-table protocol" id="protocol">
+			<section class="box box-table protocol go-animate" id="protocol">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
 						Protocol
@@ -245,7 +245,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
@@ -312,7 +312,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="box box-table roadmap" id="roadmap">
+			<section class="box box-table roadmap go-animate" id="roadmap">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
 						Roadmap
@@ -359,7 +359,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
 			</div>
 		</div>
 		<div class="colored-bg v4 box-wrapper">
@@ -433,10 +433,9 @@
 			</section>
 			<div class="bottom-panel last">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
 			</div>
 		</div>
-		<footer></footer>
 	</div>
 
 
