--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="#feedback-popup" data-fancybox class="button white block">어느 정도 가지다</a>
+								<a href="/users/sign_in" data-fancybox class="button white block">어느 정도 가지다</a>
 							</div>
 						</div>
 						<div class="form-box">
@@ -241,7 +241,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
@@ -350,7 +350,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
 			</div>
 		</div>
 		<div class="colored-bg v4 box-wrapper">
@@ -364,7 +364,7 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
-			<section class="box box-table social go-animate" id="social">
+			<section class="box box-table social" id="social">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
 						사회적인
@@ -421,10 +421,9 @@
 			</section>
 			<div class="bottom-panel last">
 				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
 			</div>
 		</div>
-		<footer></footer>
 	</div>
 
 
@@ -451,6 +450,72 @@
 			<div class="form-box">
 				<div class="form-box-container">
 					<input type="submit" name="" value="보내려면" class="button">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="popup large" id="connect-popup">
+		<div class="popup-title">신청서</div>
+		<div class="form">
+			<div class="form-box">
+				<div class="form-box-title">
+					자기 이름
+				</div>
+				<div class="form-box-container">
+					<input type="text" name="" required>
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-title">
+					이메일
+				</div>
+				<div class="form-box-container">
+					<input type="text" name="" required>
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-title">
+					국적
+				</div>
+				<div class="form-box-container">
+					<input type="text" name="">
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-title">
+					회사명을 쓰십시오
+				</div>
+				<div class="form-box-container">
+					<input type="text" name="">
+				</div>
+			</div>
+			<div class="form-box form-help">
+				<div class="form-box-container">
+					<strong>우리는 법에 준수하는데 너희의 정보를 아무 제삼자에게 전달하지 않는다. 그 서식은 사업에 대한 광고, 공식적 제안, 서비스의 판매나 구매, 서비스나 제품의 공급을 위한 직접적이거나 간접적 협정이 아니다.</strong>
+				</div>
+				<div class="form-box-container">
+					<label class="checkbox">
+						<input type="checkbox" name="" required>
+						제 정보가 공공단체나 다른 단체의 요청으로 법에 따라 전달될 수 있다.
+					</label>
+				</div>
+				<div class="form-box-container">
+					<label class="checkbox">
+						<input type="checkbox" name="" required>
+						저는 제 개인 정보가 아무 관계회사와 프로세서로 전달되고 그들로 처리될 수 있다.
+					</label>
+				</div>
+				<div class="form-box-container">
+					<label class="checkbox">
+						<input type="checkbox" name="" required>
+						제가 제공한 정보의 타당성을 확인하며 정보의 왜곡에 대한 책임을 지고 받아들인다.
+					</label>
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-container">
+					<input type="submit" name="" value="Send" class="button">
 				</div>
 			</div>
 		</div>
