--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="/users/sign_in" data-fancybox class="button white block">어느 정도 가지다</a>
+								<a href="/users/sign_in" class="button white block">어느 정도 가지다</a>
 							</div>
 						</div>
 						<div class="form-box">
@@ -241,7 +241,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
@@ -350,7 +350,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
 			</div>
 		</div>
 		<div class="colored-bg v4 box-wrapper">
@@ -421,7 +421,7 @@
 			</section>
 			<div class="bottom-panel last">
 				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
 			</div>
 		</div>
 	</div>
