--- a/en/index.html
+++ b/en/index.html
@@ -59,7 +59,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<!--<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>-->
-					<!--<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>-->
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<!--<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog & Media</a></li>-->
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
@@ -173,7 +173,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<!--<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>-->
-					<!--<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>-->
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<!--<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog & Media</a></li>-->
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
@@ -257,7 +257,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<!--<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>-->
-					<!--<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>-->
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<!--<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog & Media</a></li>-->
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
@@ -362,6 +362,70 @@
 				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
 			</div>
 		</div>
+		<div class="top-gradient-bg box-wrapper">
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				</ul>
+			</div>
+			<div class="colored-bg-elements">
+				<div class="blot blot-7"></div>
+			</div>
+			<section class="box box-table roadmap go-animate" id="team">
+				<div class="box-cell">
+					<h2 class="box-title ta-r">
+						Team
+					</h2>
+					<h3 class="box-title-ann mtop ta-r">Team</h3>
+					<div class="team-container">
+						<div class="team-slider-wrapper">
+							<div class="team-slider">
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-1.jpg" alt="">
+									</div>
+									<div class="team-name">K. Lee</div>
+									<div class="team-type">CTO co-founder</div>
+									<div class="team-description">
+										senior programmer, extensive experience  for trading terminals programming, as well as being an expert in blockchain development
+									</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-2.jpg" alt="">
+									</div>
+									<div class="team-name">Julia Choi</div>
+									<div class="team-type">CMO co-founder</div>
+									<div class="team-description">
+										 7 years of experience in digital marketing, helped 5+ blockchain projects to raise more then $10 millions
+									</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-3.jpg" alt="">
+									</div>
+									<div class="team-name">Ann Rosenberg</div>
+									<div class="team-type">Business Development</div>
+									<div class="team-description">
+										major experience in stock market, working for and consulting early growth start-ups, focuses on capital deployment and strategic partnerships
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<div class="bottom-panel">
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
+			</div>
+		</div>
 		<div class="colored-bg v4 box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -371,7 +435,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<!--<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>-->
-					<!--<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>-->
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<!--<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog & Media</a></li>-->
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
