--- a/en/index.html
+++ b/en/index.html
@@ -388,30 +388,30 @@
 							<div class="team-slider">
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="images/team-image-1.jpg" alt="">
+										<img src="/images/team-image-1.jpg" alt="">
 									</div>
 									<div class="team-name">K. Lee</div>
-									<div class="team-type">CTO co-founder</div>
+									<div class="team-type">Co-Founder and CTO</div>
 									<div class="team-description">
 										senior programmer, extensive experience  for trading terminals programming, as well as being an expert in blockchain development
 									</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="images/team-image-2.jpg" alt="">
+										<img src="/images/team-image-2.jpg" alt="">
 									</div>
 									<div class="team-name">Julia Choi</div>
-									<div class="team-type">CMO co-founder</div>
+									<div class="team-type">Co-founder and CMO</div>
 									<div class="team-description">
 										 7 years of experience in digital marketing, helped 5+ blockchain projects to raise more then $10 millions
 									</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="images/team-image-3.jpg" alt="">
+										<img src="/images/team-image-3.jpg" alt="">
 									</div>
 									<div class="team-name">Ann Rosenberg</div>
-									<div class="team-type">Business Development</div>
+									<div class="team-type">Business Development Manager</div>
 									<div class="team-description">
 										major experience in stock market, working for and consulting early growth start-ups, focuses on capital deployment and strategic partnerships
 									</div>
