upd social and some text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -172,7 +172,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -254,7 +254,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -364,7 +364,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -374,9 +374,9 @@
 			<section class="box box-table roadmap go-animate" id="team">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
-						Team
+						팀
 					</h2>
-					<h3 class="box-title-ann mtop ta-r">Team</h3>
+					<h3 class="box-title-ann mtop ta-r">팀</h3>
 					<div class="team-container">
 						<div class="team-slider-wrapper">
 							<div class="team-slider">
@@ -428,7 +428,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -465,8 +465,8 @@
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="#" class="social-image">
-								<img src="images/social-image-4.png" alt="">
+							<a href="https://github.com/ProductProtocol" class="social-image">
+								<img src="images/social-image-14.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
@@ -475,12 +475,12 @@
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="#" class="social-image">
-								<img src="images/social-image-9.png" alt="">
+							<a href="https://m.youtube.com/watch?v=IjEgbEW_VxI" class="social-image">
+								<img src="images/social-image-13.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="#" class="social-image">
+							<a href="https://steemit.com/@product.protocol" class="social-image">
 								<img src="images/social-image-5.png" alt="">
 							</a>
 						</div>
