--- a/en/index.html
+++ b/en/index.html
@@ -605,6 +605,16 @@
 	<script src="../js/alfaNavbar.min.js"></script>
 	<script src="../js/jquery.fancybox.min.js"></script>
 	<script src="../js/scripts.js"></script>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133652247-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-133652247-1');
+	</script>
 	<!-- Scripts> -->
 </body>
 </html>
