fix img on footer

--- a/en/index.html
+++ b/en/index.html
@@ -449,47 +449,47 @@
 					<div class="socials-list">
 						<div class="socials-list-item">
 							<a href="https://t.me/productprotocolio" class="social-image">
-								<img src="images/social-image-1.png" alt="">
+								<img src="/images/social-image-1.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://twitter.com/ProductProtocol" class="social-image">
-								<img src="images/social-image-2.png" alt="">
+								<img src="/images/social-image-2.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://www.facebook.com/Product-Protocol-231270721071549/" class="social-image">
-								<img src="images/social-image-8.png" alt="">
+								<img src="/images/social-image-8.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://medium.com/@p.protocol" class="social-image">
-								<img src="images/social-image-3.png" alt="">
+								<img src="/images/social-image-3.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://www.reddit.com/user/ProductProtocol" class="social-image">
-								<img src="images/social-image-7.png" alt="">
+								<img src="/images/social-image-7.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://github.com/ProductProtocol" class="social-image">
-								<img src="images/social-image-14.png" alt="">
+								<img src="/images/social-image-14.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="#" class="social-image">
-								<img src="images/social-image-10.png" alt="">
+								<img src="/images/social-image-10.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://m.youtube.com/watch?v=IjEgbEW_VxI" class="social-image">
-								<img src="images/social-image-13.png" alt="">
+								<img src="/images/social-image-13.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
 							<a href="https://steemit.com/@product.protocol" class="social-image">
-								<img src="images/social-image-5.png" alt="">
+								<img src="/images/social-image-5.png" alt="">
 							</a>
 						</div>
 					</div>
