--- a/en/index.html
+++ b/en/index.html
@@ -32,7 +32,7 @@
 			<nav class="header-nav">
 				<div class="header-nav-button"><div class="header-nav-button-icon"></div></div>
 				<ul class="header-nav-list">
-					<li class="header-nav-list-item"><a href="" title="" target="_blank">Protocol</a></li>
+					<li class="header-nav-list-item"><a href="https://pprotocol.org/" title="" target="_blank">Protocol</a></li>
 					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_e.pdf" title="" target="_blank">White Paper</a></li>
 					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_OP_e.pdf" title="" class="current" target="_blank">One Pager</a></li>
 					<li class="header-nav-list-item"><a href="/profile" title="">Profile</a></li>
@@ -117,7 +117,7 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="/users/sign_in" class="button white block">Participate</a>
+								<a href="/users/sign_in" class="button white block big">Participate in private sale</a>
 							</div>
 						</div>
 						<div class="form-box">
@@ -245,7 +245,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
@@ -359,7 +359,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
 		<div class="top-gradient-bg box-wrapper">
@@ -423,7 +423,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
 		<div class="colored-bg v4 box-wrapper">
@@ -452,6 +452,7 @@
 								<img src="/images/social-image-1.png" alt="">
 							</a>
 						</div>
+						<!--
 						<div class="socials-list-item">
 							<a href="https://twitter.com/ProductProtocol" class="social-image">
 								<img src="/images/social-image-2.png" alt="">
@@ -462,6 +463,7 @@
 								<img src="/images/social-image-8.png" alt="">
 							</a>
 						</div>
+						-->
 						<div class="socials-list-item">
 							<a href="https://medium.com/@p.protocol" class="social-image">
 								<img src="/images/social-image-3.png" alt="">
@@ -475,11 +477,6 @@
 						<div class="socials-list-item">
 							<a href="https://github.com/ProductProtocol" class="social-image">
 								<img src="/images/social-image-14.png" alt="">
-							</a>
-						</div>
-						<div class="socials-list-item">
-							<a href="#" class="social-image">
-								<img src="/images/social-image-10.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
@@ -497,7 +494,7 @@
 			</section>
 			<div class="bottom-panel last">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
+				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
 	</div>
