--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<nav class="header-nav">
 				<div class="header-nav-button"><div class="header-nav-button-icon"></div></div>
 				<ul class="header-nav-list">
-					<li class="header-nav-list-item"><a href="#" title="">실험 계획안</a></li>
+					<li class="header-nav-list-item"><a href="https://pprotocol.org/" title="">실험 계획안</a></li>
 					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_k.pdf" title="" target="_blank">백지</a></li>
 					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_OP_k.pdf" title="" class="current" target="_blank">하나의 호출기</a></li>
 					<li class="header-nav-list-item"><a href="/profile" title="">윤곽</a></li>
@@ -117,7 +117,7 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="/users/sign_in" class="button white block">어느 정도 가지다</a>
+								<a href="/users/sign_in" class="button white block big">개인적 판매에 참여하다</a>
 							</div>
 						</div>
 						<div class="form-box">
@@ -161,7 +161,7 @@
 				</section>
 			</div>
 			<div class="bottom-panel">
-				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 			</div>
 		</div>
 		<div class="top-gradient-bg box-wrapper">
@@ -242,8 +242,8 @@
 				</div>
 			</section>
 			<div class="bottom-panel">
-				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
@@ -352,8 +352,8 @@
 				</div>
 			</section>
 			<div class="bottom-panel">
-				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
 		<div class="top-gradient-bg box-wrapper">
@@ -416,8 +416,8 @@
 				</div>
 			</section>
 			<div class="bottom-panel">
-				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
 		<div class="colored-bg v4 box-wrapper">
@@ -444,6 +444,7 @@
 								<img src="images/social-image-1.png" alt="">
 							</a>
 						</div>
+						<!--
 						<div class="socials-list-item">
 							<a href="https://twitter.com/ProductProtocol" class="social-image">
 								<img src="images/social-image-2.png" alt="">
@@ -454,6 +455,7 @@
 								<img src="images/social-image-8.png" alt="">
 							</a>
 						</div>
+						-->
 						<div class="socials-list-item">
 							<a href="https://medium.com/@p.protocol" class="social-image">
 								<img src="images/social-image-3.png" alt="">
@@ -470,11 +472,6 @@
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="#" class="social-image">
-								<img src="images/social-image-10.png" alt="">
-							</a>
-						</div>
-						<div class="socials-list-item">
 							<a href="https://m.youtube.com/watch?v=IjEgbEW_VxI" class="social-image">
 								<img src="images/social-image-13.png" alt="">
 							</a>
@@ -488,8 +485,8 @@
 				</div>
 			</section>
 			<div class="bottom-panel last">
-				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
 	</div>
