--- a/en/index.html
+++ b/en/index.html
@@ -58,9 +58,8 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<!--<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>-->
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
-					<!--<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog & Media</a></li>-->
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -79,6 +78,10 @@
 			</div>
 			<section class="box box-table main go-animate" id="main">
 				<div class="box-cell">
+					<div class="start-box">
+						<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 107"><polygon points="0 27 0 81 15 89 15 89 46 107 46 90 15 72 15 36 0 27" fill="#3000ff"/><polygon points="30 63 15 72 46 90 77 71 62 63 46 72 30 63" fill="#82e2ff"/><polygon points="92 80 46 107 46 90 77 71 77 35 92 27 92 80" fill="#037ce4"/><polygon points="46 35 30 44 30 63 15 72 15 36 46 18 46 35" fill="#008be8"/><polygon points="77 35 46 18 46 35 62 44 62 63 77 71 77 35" fill="#3700ff"/><polygon points="46 0 0 27 15 36 46 18 77 35 92 27 46 0" fill="#80daff"/><polygon points="30 44 46 53 46 72 30 63 30 44" fill="#720fb7"/><polygon points="62 44 46 53 46 72 62 63 62 44" fill="#b202bb"/><polygon points="46 35 30 44 46 53 62 44 46 35" fill="#e700a9"/></svg>
+						Public tokensale <br>start in April
+					</div>
 					<div class="main-image-wrapper">
 						<div class="main-image-coin"></div>
 						<img src="/images/main-image-bg.png" alt="" class="main-image-bg">
@@ -111,7 +114,6 @@
 							<div class="main-image-box-light"></div>
 							<div class="main-image-box-icon"><img src="/images/main-small-image-1.png" alt="" class="main-small-image im-1"></div>
 						</div>
-
 					</div>
 					<h1 class="first-title">Business <br>tokenization <br>protocol</h1>
 					<div class="form main-form">
@@ -172,9 +174,8 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<!--<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>-->
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
-					<!--<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog & Media</a></li>-->
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -245,7 +246,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate in private sale</a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
@@ -256,9 +257,8 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<!--<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>-->
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
-					<!--<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog & Media</a></li>-->
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -359,7 +359,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate in private sale</a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
 		<div class="top-gradient-bg box-wrapper">
@@ -423,7 +423,40 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate in private sale</a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
+			</div>
+		</div>
+		<div class="colored-bg box-wrapper">
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				</ul>
+			</div>
+			<section class="box box-table news" id="news">
+				<div class="box-cell">
+					<h2 class="box-title ta-r">
+						Video
+					</h2>
+					<h3 class="box-title-ann ta-r">Video</h3>
+					<div class="news-list">
+						<div class="news-list-item big">
+							<div class="video">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/IjEgbEW_VxI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<div class="bottom-panel last">
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
 		<div class="colored-bg v4 box-wrapper">
@@ -434,9 +467,8 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<!--<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>-->
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
-					<!--<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog & Media</a></li>-->
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -452,18 +484,21 @@
 								<img src="/images/social-image-1.png" alt="">
 							</a>
 						</div>
-						<!--
 						<div class="socials-list-item">
-							<a href="https://twitter.com/ProductProtocol" class="social-image">
+							<a href="https://open.kakao.com/o/gvAI0sbb" class="social-image">
+								<img src="/images/social-image-10.png" alt="">
+							</a>
+						</div>
+						<div class="socials-list-item">
+							<a href="https://twitter.com/Pprotocolglobal" class="social-image">
 								<img src="/images/social-image-2.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://www.facebook.com/Product-Protocol-231270721071549/" class="social-image">
+							<a href="https://www.facebook.com/pprotocolio" class="social-image">
 								<img src="/images/social-image-8.png" alt="">
 							</a>
 						</div>
-						-->
 						<div class="socials-list-item">
 							<a href="https://medium.com/@p.protocol" class="social-image">
 								<img src="/images/social-image-3.png" alt="">
@@ -494,7 +529,7 @@
 			</section>
 			<div class="bottom-panel last">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" data-fancybox class="button white moved-to-bottom-panel hide">Participate in private sale</a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
 	</div>
