--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -77,6 +78,10 @@
 			</div>
 			<section class="box box-table main go-animate" id="main">
 				<div class="box-cell">
+					<div class="start-box">
+						<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 107"><polygon points="0 27 0 81 15 89 15 89 46 107 46 90 15 72 15 36 0 27" fill="#3000ff"/><polygon points="30 63 15 72 46 90 77 71 62 63 46 72 30 63" fill="#82e2ff"/><polygon points="92 80 46 107 46 90 77 71 77 35 92 27 92 80" fill="#037ce4"/><polygon points="46 35 30 44 30 63 15 72 15 36 46 18 46 35" fill="#008be8"/><polygon points="77 35 46 18 46 35 62 44 62 63 77 71 77 35" fill="#3700ff"/><polygon points="46 0 0 27 15 36 46 18 77 35 92 27 46 0" fill="#80daff"/><polygon points="30 44 46 53 46 72 30 63 30 44" fill="#720fb7"/><polygon points="62 44 46 53 46 72 62 63 62 44" fill="#b202bb"/><polygon points="46 35 30 44 46 53 62 44 46 35" fill="#e700a9"/></svg>
+						공개 토큰 <br>4 월에 시작하다
+					</div>
 					<div class="main-image-wrapper">
 						<div class="main-image-coin"></div>
 						<img src="images/main-image-bg.png" alt="" class="main-image-bg">
@@ -173,6 +178,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -255,6 +261,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -365,6 +372,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -420,6 +428,39 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
+		<div class="colored-bg box-wrapper">
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
+				</ul>
+			</div>
+			<section class="box box-table news" id="news">
+				<div class="box-cell">
+					<h2 class="box-title ta-r">
+						블로그
+					</h2>
+					<h3 class="box-title-ann ta-r">블로그</h3>
+					<div class="news-list">
+						<div class="news-list-item big">
+							<div class="video">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/IjEgbEW_VxI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<div class="bottom-panel last">
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
+			</div>
+		</div>
 		<div class="colored-bg v4 box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -429,6 +470,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">비디오</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -444,18 +486,21 @@
 								<img src="images/social-image-1.png" alt="">
 							</a>
 						</div>
-						<!--
 						<div class="socials-list-item">
-							<a href="https://twitter.com/ProductProtocol" class="social-image">
+							<a href="https://open.kakao.com/o/gvAI0sbb" class="social-image">
+								<img src="images/social-image-10.png" alt="">
+							</a>
+						</div>
+						<div class="socials-list-item">
+							<a href="https://twitter.com/Pprotocolglobal" class="social-image">
 								<img src="images/social-image-2.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://www.facebook.com/Product-Protocol-231270721071549/" class="social-image">
+							<a href="https://www.facebook.com/pprotocolio" class="social-image">
 								<img src="images/social-image-8.png" alt="">
 							</a>
 						</div>
-						-->
 						<div class="socials-list-item">
 							<a href="https://medium.com/@p.protocol" class="social-image">
 								<img src="images/social-image-3.png" alt="">
