--- a/en/index.html
+++ b/en/index.html
@@ -564,7 +564,7 @@
 		</div>
 	</div>
 
-	<div class="popup large" id="connect-popup">
+	<form action="https://pprotocol.io/requests" method="POST" class="popup large" id="connect-popup">
 		<div class="popup-title">Request Tokenization</div>
 		<div class="form">
 			<div class="form-box">
@@ -572,7 +572,7 @@
 					Your name
 				</div>
 				<div class="form-box-container">
-					<input type="text" name="" required>
+					<input type="text" name="request[name]" required>
 				</div>
 			</div>
 			<div class="form-box">
@@ -580,7 +580,7 @@
 					Your email
 				</div>
 				<div class="form-box-container">
-					<input type="text" name="" required>
+					<input type="email" name="request[email]" required>
 				</div>
 			</div>
 			<div class="form-box">
@@ -588,7 +588,7 @@
 					Your country
 				</div>
 				<div class="form-box-container">
-					<input type="text" name="">
+					<input type="text" name="request[country]">
 				</div>
 			</div>
 			<div class="form-box">
@@ -596,7 +596,7 @@
 					Your company name
 				</div>
 				<div class="form-box-container">
-					<input type="text" name="">
+					<input type="text" name="request[company]">
 				</div>
 			</div>
 			<div class="form-box form-help">
@@ -624,11 +624,11 @@
 			</div>
 			<div class="form-box">
 				<div class="form-box-container">
-					<input type="submit" name="" value="Send" class="button">
+					<input type="submit" name="" value="Send" class="button" id="submit-request">
 				</div>
 			</div>
 		</div>
-	</div>
+	</form>
 	<!-- Popups> -->
 
 
