--- a/en/index.html
+++ b/en/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="../css/reset.css" media="all">
 	<link rel="stylesheet" href="../css/slick.css" media="all">
 	<link rel="stylesheet" href="../css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="../css/style.css" media="all">
+	<link rel="stylesheet" href="../css/style.css?v1" media="all">
 
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/html5.js"></script>
@@ -638,7 +638,7 @@
 	<script src="../js/alfaNavbar.min.js"></script>
 	<script src="../js/jquery.fancybox.min.js"></script>
 	<script src="../js/typed.min.js"></script>
-	<script src="../js/scripts.js"></script>
+	<script src="../js/scripts.js?v1"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133652247-1"></script>
