--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 					자기 이름
 				</div>
 				<div class="form-box-container">
-					<input type="text" name="request_investments[name]" required>
+					<input type="text" name="request_investment[name]" required>
 				</div>
 			</div>
 			<div class="form-box">
@@ -647,7 +647,7 @@
 					이메일
 				</div>
 				<div class="form-box-container">
-					<input type="email" name="request_investments[email]" required>
+					<input type="email" name="request_investment[email]" required>
 				</div>
 			</div>
 			<div class="form-box">
@@ -655,7 +655,7 @@
 					Amount
 				</div>
 				<div class="form-box-container">
-					<input type="text" name="request_investments[amount]">
+					<input type="text" name="request_investment[amount]">
 				</div>
 			</div>
 			<div class="form-box">
