--- a/en/index.html
+++ b/en/index.html
@@ -119,7 +119,7 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="/users/sign_in" class="button white block big">Participate in private sale</a>
+								<a  href="#investment-popup" data-fancybox class="button white block big">Participate in private sale</a>
 							</div>
 						</div>
 						<div class="form-box">
@@ -564,7 +564,7 @@
 		</div>
 	</div>
 
-	<form action="https://pprotocol.io/requests" method="POST" class="popup large" id="connect-popup">
+	<form action="https://pprotocol.io/requests" method="POST" class="popup large submit-popup" id="connect-popup">
 		<div class="popup-title">Request Tokenization</div>
 		<div class="form">
 			<div class="form-box">
@@ -624,7 +624,42 @@
 			</div>
 			<div class="form-box">
 				<div class="form-box-container">
-					<input type="submit" name="" value="Send" class="button" id="submit-request">
+					<input type="submit" name="" value="Send" class="button submit-request">
+				</div>
+			</div>
+		</div>
+	</form>
+
+	<form action="https://pprotocol.io/request_investments" method="POST" class="popup large submit-popup" id="investment-popup">
+		<div class="popup-title">Participate</div>
+		<div class="form">
+			<div class="form-box">
+				<div class="form-box-title">
+					Name
+				</div>
+				<div class="form-box-container">
+					<input type="text" name="request_investment[name]" required>
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-title">
+					Email
+				</div>
+				<div class="form-box-container">
+					<input type="email" name="request_investment[email]" required>
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-title">
+					Amount
+				</div>
+				<div class="form-box-container">
+					<input type="text" name="request_investment[amount]">
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-container">
+					<input type="submit" name="" value="Send" class="button submit-request">
 				</div>
 			</div>
 		</div>
