--- a/en/index.html
+++ b/en/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="../css/reset.css" media="all">
 	<link rel="stylesheet" href="../css/slick.css" media="all">
 	<link rel="stylesheet" href="../css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="../css/style.css?v3" media="all">
+	<link rel="stylesheet" href="../css/style.css?v4" media="all">
 
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/html5.js"></script>
@@ -59,6 +59,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -175,6 +176,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -258,6 +260,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -371,6 +374,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -385,7 +389,7 @@
 					<h3 class="box-title-ann mtop ta-r">Team</h3>
 					<div class="team-container">
 						<div class="team-slider-wrapper">
-							<div class="team-slider">
+							<div class="team-slider team-list">
 								<div class="team-slide">
 									<div class="team-image">
 										<img src="/images/team-image-1.jpg" alt="">
@@ -393,7 +397,7 @@
 									<div class="team-name">K. Lee</div>
 									<div class="team-type">Co-Founder and CTO</div>
 									<div class="team-description">
-										senior programmer, extensive experience  for trading terminals programming, as well as being an expert in blockchain development
+										senior programmer, extensive experience for trading terminals programming, as well as being an expert in blockchain development
 									</div>
 								</div>
 								<div class="team-slide">
@@ -416,6 +420,37 @@
 										major experience in stock market, working for and consulting early growth start-ups, focuses on capital deployment and strategic partnerships
 									</div>
 								</div>
+
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/team-image-4.jpg" alt="">
+									</div>
+									<div class="team-name">Kim Sung-min</div>
+									<div class="team-type">Operations Manager</div>
+									<div class="team-description">
+										Leader of the Executive team with many years of experience in technology startups
+									</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/team-image-5.jpg" alt="">
+									</div>
+									<div class="team-name">Bam Ki-moon</div>
+									<div class="team-type">Lead Designer</div>
+									<div class="team-description">
+										UI/UX Visual designer
+									</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/team-image-6.jpg" alt="">
+									</div>
+									<div class="team-name">Eu Chan</div>
+									<div class="team-type">Community manager/Public relations</div>
+									<div class="team-description">
+										
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -436,6 +471,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -459,6 +495,45 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
+		<div class="box-wrapper">
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				</ul>
+			</div>
+			<div class="colored-bg-elements">
+				<div class="blot blot-8"></div>
+				<div class="blot blot-9"></div>
+				<div class="blot blot-10"></div>
+			</div>
+			<section class="box box-table partners" id="partners">
+				<div class="box-cell">
+					<h2 class="box-title ta-r">
+						Partners
+					</h2>
+					<h3 class="box-title-ann ta-r">Partners</h3>
+					<div class="partners-list">
+						<div class="partners-list-item"><img src="/images/partner-image-5.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-6.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-7.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-8.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-9.png"></div>
+					</div>
+				</div>
+			</section>
+			<div class="bottom-panel last">
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
+			</div>
+		</div>
 		<div class="colored-bg v4 box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -469,6 +544,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -673,7 +749,7 @@
 	<script src="../js/slick.min.js"></script>
 	<script src="../js/alfaNavbar.min.js"></script>
 	<script src="../js/jquery.fancybox.min.js"></script>
-	<script src="../js/scripts.js?v2"></script>
+	<script src="../js/scripts.js?v3"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
